tests/invalid/bad_instance.err_exp
bad_instance.m:009: In declaration of instance of typeclass `foo'/2:
bad_instance.m:009:   error: the type `bad_instance.bar'/1 is not exported, and
bad_instance.m:009:   thus it may not be used in the interface.
